--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
 </head>
-<body class="dark:bg-slate-900 bg-gray-100 flex h-full items-center py-16">
+<body class="dark:bg-slate-900 bg-gray-100 flex h-full items-center lg:py-16">
   <div class="w-full max-w-xl mx-auto p-6" id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
