--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <title>Vite + React</title>
 </head>
 <body class="bg-gray-100 flex h-full items-center lg:py-16">
-  <div class="w-full max-w-xl mx-auto py-3" id="root"></div>
+  <div class="w-full max-w-xl mx-auto p-3" id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
