--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Wave Portal</title>
 </head>
 <body class="bg-gray-100 flex h-full items-center lg:py-16">
   <div class="w-full max-w-xl mx-auto p-3" id="root"></div>
